--- a/loop/index.html
+++ b/loop/index.html
@@ -62,7 +62,7 @@
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-							  	<a href="">
+							  	<a href="programs.html#1-2">
 							      <img class="d-block w-100" src="images/programs/chaohe.jpg" alt="First slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>中日学者对话：朝鲜半岛核问题研讨会</strong></h5>
@@ -71,7 +71,7 @@
 								</a>
 						    </div>
 						    <div class="carousel-item">
-						    	<a href="">
+						    	<a href="programs.html#2-1">
 							      <img class="d-block w-100" src="images/programs/xuanfeng.jpg" alt="Second slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>纪录片《旋风九日》在华盛顿展映</strong></h5>
@@ -80,7 +80,7 @@
 								 </a>
 						    </div>
 						    <div class="carousel-item">
-						    	<a href="">
+						    	<a href="programs.html#1-1">
 							      <img class="d-block w-100" src="images/programs/guojifankong.jpg" alt="Third slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
@@ -115,7 +115,7 @@
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs.html#1-2">中日学者对话：朝鲜半岛核问题研讨会</a></h6>
-						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						    <p class="prog-intro">2017年2月26日，美中新视角基金会和日本笹川日中友好基金在北京杉园联合举办中日学者对话活动。会议的主...</p>
 						  </div>
 						</div>
 
@@ -124,7 +124,7 @@
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs.html#2-2">市长代表团</a></h6>
-						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						    <p class="prog-intro">2017年3月11-17日，基金会与美国泰倡议 （Tai Initiative）联合举办美国市长代表团访华活动，代表团...</p>
 						  </div>
 						</div>
 						<hr>
@@ -132,7 +132,7 @@
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs.html#2-1">旋风九日系列访美活动</a></h6>
-						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						    <p class="prog-intro">2016年11月10日至22日，美中新视角基金会策划并组织了反映邓小平1979年访美全程记录的影片《旋风九日》在...</p>
 						  </div>
 						</div>
 						<hr>
@@ -140,7 +140,7 @@
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs.html#1-1">中美反恐论坛</a></h6>
-						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						    <p class="prog-intro">自从2014年，美中新视角基金会连续四年在北京杉园举办了中美反恐国际高层论坛。论坛由美中新视角基金会，...</p>
 						  </div>
 						</div>
 					</div>
@@ -154,31 +154,31 @@
 				<div class="col-9 second-left">
 					<div class="row">    <!--项目，近期活动，外网文章 -->
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs.html#1-4">
 								<img src="images/indexThumbnails/wideThumbnails/xitaihu1.jpg" class="wide-thumbbnail mb-3">
 								<h5>中国西太湖·全球公司发展论坛</h5>
 								<p>论坛汇聚全球经济的实践者、研究者和决策者，包括国家部委政策制定和指导部门有关领导，中、美、日、德等国一流智库专家学者，国际商会和机构代表，全球公司大中华区负责人，知名中国企业家等在内的280余位嘉宾...</p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs.html#1-5">
 								<img src="images/indexThumbnails/wideThumbnails/zhongrixuezhe.jpg" class="wide-thumbbnail mb-3">
 								<h5>中日学者经济对话</h5>
 								<p>通过这40多年以来的发展，不管中间的起起伏伏，总体上中日间已经形成了相对密切的经贸关系。不管政治关系好坏，都是一种相互需要，既有利于双方各自的经济需求，同时也强化了双方的总体关系。中日经贸关系是双边关系非常重要的一个内容。</p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs.html#2-2">
 								<img src="images/indexThumbnails/wideThumbnails/shizhang.jpg" class="wide-thumbbnail mb-3">
 								<h5>市长代表团</h5>
 								<p>2017年3月11-17日，基金会与美国泰倡议 （Tai Initiative）联合举办美国市长代表团访华活动，代表团由美国密歇根州威斯特兰市和俄亥俄州加哈纳市的市长及专业机构人士组成，访问了上海、常州、深圳三城，活动极大促进中美市级政府官员之间的交流和相互了解，帮助双方城市获知...</p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
-								<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
-								<h5>中日学者交流项目</h5>
-								<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+							<a href="programs.html#3-1">
+								<img src="images/indexThumbnails/wideThumbnails/katezhongxin.jpg" class="wide-thumbbnail mb-3">
+								<h5>卡特中心论文征集活动</h5>
+								<p>由卡特中心、《环球时报》、以及美国埃默里大学全球战略与项目办公室联合举办的第四届中美青年学者论坛会议于2018年1月30日在美国亚特兰大举行。中美青年学者论坛于2014年由卡特中心和环球时报携手建立，是为两国青年学者相互交流、沟通和研究课题所提供的平台。</p>
 							</a>
 						</div>
 					</div>
