--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -25,7 +25,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="programs.html">Programs</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
@@ -62,7 +62,7 @@
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-							  	<a href="">
+							  	<a href="programs_EN.html#1-2">
 							      <img class="d-block w-100" src="images/programs/chaohe.jpg" alt="First slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>A Conversation Between Sino-Japanese Scholars: Conference on the Korean Peninsula’s Nuclear Threat</strong></h5>
@@ -71,7 +71,7 @@
 								</a>
 						    </div>
 						    <div class="carousel-item">
-						    	<a href="">
+						    	<a href="programs_EN.html#2-1">
 							      <img class="d-block w-100" src="images/programs/xuanfeng.jpg" alt="Second slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>Documentary "Mr. Deng Goes to Washington" Screening in Washington D.C.</strong></h5>
@@ -80,7 +80,7 @@
 								 </a>
 						    </div>
 						    <div class="carousel-item">
-						    	<a href="">
+						    	<a href="programs_EN.html#1-1">
 							      <img class="d-block w-100" src="images/programs/guojifankong.jpg" alt="Third slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>The Third U.S. - China Counterterrorism Conference</strong></h5>
@@ -114,7 +114,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs.html#1-2">A Conversation Between Sino-Japanese Scholars: Conference on the Korean Peninsula’s Nuclear Threat</a></h6>
+						    <h6 class="mt-0"><a href="programs_EN.html#1-2">A Conversation Between Sino-Japanese Scholars: Conference on the Korean Peninsula’s Nuclear Threat</a></h6>
 						    <p class="prog-intro">The U.S. - China New Perspectives Foundation and the Sasakawa Japan-China Friendship Fund hosted a Sino-Japanese Scholar Conversation Event</p>
 						  </div>
 						</div>
@@ -123,7 +123,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs.html#2-2">Mayor’s Delegation</a></h6>
+						    <h6 class="mt-0"><a href="programs_EN.html#2-2">Mayor’s Delegation</a></h6>
 						    <p class="prog-intro">From March 11 – 17, 2017, the U.S. - China New Perspectives Foundation and the Tai Initiative jointly held a U.S. Mayor’s Delegation to China event.</p>
 						  </div>
 						</div>
@@ -131,7 +131,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs.html#2-1">Documentary "Mr. Deng Goes to Washington" Screening in Washington D.C.</a></h6>
+						    <h6 class="mt-0"><a href="programs_EN.html#2-1">Documentary "Mr. Deng Goes to Washington" Screening in Washington D.C.</a></h6>
 						    <p class="prog-intro">On November 16, 2016, the screening of documentary Mr. Deng Goes to Washington was held at the Meridian House in Washington D.C.</p>
 						  </div>
 						</div>
@@ -139,7 +139,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs.html#1-1">The Third U.S. - China Counterterrorism Conference</a></h6>
+						    <h6 class="mt-0"><a href="programs_EN.html#1-1">The Third U.S. - China Counterterrorism Conference</a></h6>
 						    <p class="prog-intro">Since 2014, the U.S. - China New Perspectives Foundation has held the Sino - U.S. International High-Level Counterterrorism Conference at the Beijing</p>
 						  </div>
 						</div>
@@ -154,14 +154,14 @@
 				<div class="col-9 second-left">
 					<div class="row">    <!--项目，近期活动，外网文章 -->
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs_EN.html#1-4">
 								<img src="images/indexThumbnails/wideThumbnails/xitaihu1.jpg" class="wide-thumbbnail mb-3">
 								<h5>The first West Taihu Global Enterprises Development Forum</h5>
 								<p>On May 11-12, 2018, the U.S.-China New Perspectives Foundation co-hosted the first West Taihu Global Enterprises Development Forum, partnered with Changzhou  Xitai Lake Technology Industrial Park(in the city of Changzhou, Jiangsu province) and Z-share Consulting.</p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs_EN.html#1-5">
 								<img src="images/indexThumbnails/wideThumbnails/zhongrixuezhe.jpg" class="wide-thumbbnail mb-3">
 								<h5>The China-Japan Scholars’ Dialogue on Sino-Japanese Economic Issues Forum</h5>
 								<p>The China-Japan Scholars’ Dialogue on Sino-Japanese Economic Issues Forum, hosted by the U.S.-China New Perspectives Foundation, held on March 27, 2018 in Beijing. Zhixing Zhou, chairman of the U.S.-China New Perspectives Foundation, hosted the forum, which was divided into four sub-forums.
@@ -169,17 +169,17 @@
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
+							<a href="programs_EN.html#2-2">
 								<img src="images/indexThumbnails/wideThumbnails/shizhang.jpg" class="wide-thumbbnail mb-3">
 								<h5>Mayor’s Delegation</h5>
 								<p>From March 11 – 17, 2017, the U.S. - China New Perspectives Foundation and the Tai Initiative jointly held a U.S. Mayor’s Delegation to China event. The delegation was from Westland, Michigan and Gahanna, Ohio, and was composed of people from professional organizations. </p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
-							<a href="#">
-								<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
-								<h5>中日学者交流项目</h5>
-								<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+							<a href="programs_EN.html#3-1">
+								<img src="images/indexThumbnails/wideThumbnails/katezhongxin.jpg" class="wide-thumbbnail mb-3">
+								<h5>The Carter Center Call for Papers Event</h5>
+								<p>On January 30, 2018, the Carter Center, The Global Times, and Emory University’s Office of Global Strategy and Initiatives jointly held the Fourth U.S. - China Young Scholars Conference in Atlanta, Georgia.</p>
 							</a>
 						</div>
 					</div>
