--- a/loop/view_EN.html
+++ b/loop/view_EN.html
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="row" id="navDiv">
 				<div class="w-20">
-					<img src="images/newLogo.png" id="logoImg" />
+					<img src="images/newLogo.png" id="logoImg"/>
 				</div>
 				<div class="w-10 ml-1">
 					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
@@ -45,7 +45,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
