--- a/loop/contact_EN.html
+++ b/loop/contact_EN.html
@@ -45,7 +45,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
