--- a/loop/programs.html
+++ b/loop/programs.html
@@ -43,7 +43,7 @@
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="index_EN.html">English</a>
+					    <a class="dropdown-item" href="programs_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
