--- a/loop/contact_EN.html
+++ b/loop/contact_EN.html
@@ -93,9 +93,6 @@
 							Address: 1743 22nd St NW, Washington, DC 20008
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							TEL: +1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
 							E-mail: info@ucnpf.org, ucnpf@163.com
 						</p>
 						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
@@ -103,9 +100,6 @@
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
 							Address: 2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							TEL: +1（626）656-3512
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
 							E-mail: info@ucnpf.org, ucnpf@163.com
@@ -132,7 +126,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
