--- a/loop/index.html
+++ b/loop/index.html
@@ -75,7 +75,7 @@
 							      <img class="d-block w-100" src="images/programs/xuanfeng.jpg" alt="Second slide">
 							      <div class="carousel-caption d-none d-md-block">
 								    <h5><strong>纪录片《旋风九日》在华盛顿展映</strong></h5>
-								    <p>11月16日，纪录片《旋风九日》在华盛顿子午线中心展映。中国驻美国大使崔天凯、美前国家安全事务助理布热津斯基应邀出席活动并致辞</p>
+								    <p>2016年11月16日，纪录片《旋风九日》在华盛顿子午线中心展映。中国驻美国大使崔天凯、美前国家安全事务助理布热津斯基应邀出席活动并致辞</p>
 								  </div>
 								 </a>
 						    </div>
@@ -205,7 +205,7 @@
 					<hr class="dash-hr">
 
 					<img src="images/shared/pub2.jpg">
-					<p>美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
+					<p>美中新视角基金会于2016年成立于。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
 				</div>
 			</div>
 			
@@ -215,7 +215,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
