--- a/loop/programs.html
+++ b/loop/programs.html
@@ -88,8 +88,13 @@
 
 			      <div class="tab-pane fade prog-content" id="content1-3" role="tabpanel" aria-labelledby="v-pills-messages-tab">
 			      	<h3 class="text-center">北京跨国公司研讨会</h3>
+			      	<img src="images/programs/kuaguo1.jpg" class="large-img">
 			      	<p>
-			      		2017年12月7日，“北京CBD跨国公司政府事务高层论坛”在京圆满闭幕。此次论坛，由北京CBD跨国公司政府事务俱乐部与北京智享荟咨询有限责任公司(Z-share Consulting, http://z-share.net/)共同筹划组织，商务部外资司、北京市商务委总部经济处、北京CBD管委会等单位领导莅临论坛。美中新视角基金会创始人、总裁周志兴主持论坛，嘉宾们围绕“全面开放新格局下投资中国的机遇与优势”的主题开展深度对话交流，在中国吸引外资新机遇、中国全面开放新格局下的经济增量、提高投资服务质量等方面取得了很多共识，收到了良好效果。
+			      		2017年12月7日，“北京CBD跨国公司政府事务高层论坛”在京圆满闭幕。此次论坛，由北京CBD跨国公司政府事务俱乐部与北京智享荟咨询有限责任公司(Z-share Consulting, http://z-share.net/)共同筹划组织，商务部外资司、北京市商务委总部经济处、北京CBD管委会等单位领导莅临论坛。
+			      	</p>
+			      	<img src="images/programs/kuaguo2.jpg" class="large-img">
+			      	<p>
+			      		美中新视角基金会创始人、总裁周志兴主持论坛，嘉宾们围绕“全面开放新格局下投资中国的机遇与优势”的主题开展深度对话交流，在中国吸引外资新机遇、中国全面开放新格局下的经济增量、提高投资服务质量等方面取得了很多共识，收到了良好效果。
 			      	</p>
 			      	<!-- <img src="images/programs/kuaguo.png" class="large-img"> -->
 			      </div>
@@ -167,12 +172,15 @@
 
 			      <div class="tab-pane fade prog-content" id="content3-1" role="tabpanel" aria-labelledby="v-pills-settings-tab">
 			      	<h3 class="text-center">卡特中心论文征集活动</h3>
+			      	<img src="images/programs/kate1.jpg" class="large-img">
 			      	<p>
 			      		由卡特中心、《环球时报》、以及美国埃默里大学全球战略与项目办公室联合举办的第四届中美青年学者论坛会议于2018年1月30日在美国亚特兰大举行。中美青年学者论坛于2014年由卡特中心和环球时报携手建立，是为两国青年学者相互交流、沟通和研究课题所提供的平台。
 			      	</p>
+			      	<img src="images/programs/kate2.jpg" class="large-img">
 			      	<p>
 			      		来自中美十多个年轻学者在论坛上分享了他们的研究成果。南京大学国际关系学院朱峰，威尔逊中心基辛格中美关系研究所所长戴博、德州大学奥斯汀分校中国政策研究中心主任方大为等中美顶级专家对年轻学者的论坛进行了评判分析。
 			      	</p>
+			      	<img src="images/programs/kate3.jpg" class="large-img">
 			      	<p>
 			      		美中新视角基金会主席周志兴和《环球时报》主编胡锡进进行了专场演讲，从左右两派对中美关系存在的一些问题进行了分析。
 			      	</p>
@@ -192,7 +200,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
