--- a/loop/view.html
+++ b/loop/view.html
@@ -82,6 +82,7 @@
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
 						钝角网由北京凤凰华文传媒有限责任公司主办，是专注国际关系的学术性、思想性网站。它广泛地汇集国内外知名的国际问题专家，提供包括国际关系、中国外交、地缘政治、世界经济、世界历史等在内的国际关系学界研究内容，深入分析对中国和全球具有影响力的重大事件，以富有国际视野的权威分析，打造关心中国外交与国际形势的人士所必读的网站。
 						</p>
+						<p>钝角网是美中新视角基金会的媒体合作单位。</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
 						更多钝角网新闻请到：<a href="http://www.dunjiaodu.com" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com</a>
 						</p>
@@ -99,7 +100,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
