--- a/loop/contact.html
+++ b/loop/contact.html
@@ -90,9 +90,6 @@
 							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
 						</p>
 						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话：+1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
 							邮箱： info@ucnpf.org, ucnpf@163.com
 						</p>
 						<HR align=left width=55% color=black size=1>
@@ -117,7 +114,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
