--- a/loop/programs_EN.html
+++ b/loop/programs_EN.html
@@ -201,7 +201,7 @@
 			<div class="row footer">
 				<div class="col-9 ml-auto mr-auto footer-center">
 					<p class="text-center">
-						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+						1743 22nd St NW, Washington, DC 20008					
 					</p>
 					<p class="text-center">
 						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
