--- a/loop/view_EN.html
+++ b/loop/view_EN.html
@@ -45,7 +45,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html#1-1">Programs</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html#0-0">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
@@ -79,6 +79,9 @@
 					<div class="content-div" style="margin-top:20px;">
 						</br>
 						</br>
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
+							Dunjiaodu is the media partner of New Perspective Foundation.
+						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
 						To view more news please visit: <a href="http://www.dunjiaodu.com" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com</a>
 						</p>
