--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -25,7 +25,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html#1-1">Programs</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs_EN.html#0-0">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
@@ -114,8 +114,8 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs_EN.html#1-2">A Conversation Between Sino-Japanese Scholars: Conference on the Korean Peninsula’s Nuclear Threat</a></h6>
-						    <p class="prog-intro">The U.S. - China New Perspectives Foundation and the Sasakawa Japan-China Friendship Fund hosted a Sino-Japanese Scholar Conversation Event</p>
+						    <h6 class="mt-0"><a href="programs_EN.html#1-2">A Conversation Between Sino-Japanese Scholars...</a></h6>
+						    <p class="prog-intro">The U.S. - China New Perspectives Foundation and the Sasakawa Japan-China Friendship...</p>
 						  </div>
 						</div>
 
@@ -124,23 +124,23 @@
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs_EN.html#2-2">Mayor’s Delegation</a></h6>
-						    <p class="prog-intro">From March 11 – 17, 2017, the U.S. - China New Perspectives Foundation and the Tai Initiative jointly held a U.S. Mayor’s Delegation to China event.</p>
+						    <p class="prog-intro">From March 11 – 17, 2017, the U.S. - China New Perspectives Foundation and the Tai Initiative jointly...</p>
 						  </div>
 						</div>
 						<hr>
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs_EN.html#2-1">Documentary "Mr. Deng Goes to Washington" Screening in Washington D.C.</a></h6>
-						    <p class="prog-intro">On November 16, 2016, the screening of documentary Mr. Deng Goes to Washington was held at the Meridian House in Washington D.C.</p>
+						    <h6 class="mt-0"><a href="programs_EN.html#2-1">Documentary "Mr. Deng Goes to Washington"...</a></h6>
+						    <p class="prog-intro">On November 16, 2016, the screening of documentary Mr. Deng Goes to Washington was</p>
 						  </div>
 						</div>
 						<hr>
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="programs_EN.html#1-1">The Third U.S. - China Counterterrorism Conference</a></h6>
-						    <p class="prog-intro">Since 2014, the U.S. - China New Perspectives Foundation has held the Sino - U.S. International High-Level Counterterrorism Conference at the Beijing</p>
+						    <h6 class="mt-0"><a href="programs_EN.html#1-1">The Third U.S. - China Counterterro..</a></h6>
+						    <p class="prog-intro">Since 2014, the U.S. - China New Perspectives Foundation has held the Sino - U.S....
 						  </div>
 						</div>
 					</div>
@@ -157,14 +157,14 @@
 							<a href="programs_EN.html#1-4">
 								<img src="images/indexThumbnails/wideThumbnails/xitaihu1.jpg" class="wide-thumbbnail mb-3">
 								<h5>The first West Taihu Global Enterprises Development Forum</h5>
-								<p>On May 11-12, 2018, the U.S.-China New Perspectives Foundation co-hosted the first West Taihu Global Enterprises Development Forum, partnered with Changzhou  Xitai Lake Technology Industrial Park(in the city of Changzhou, Jiangsu province) and Z-share Consulting.</p>
+								<p>On May 11-12, 2018, the U.S.-China New Perspectives Foundation co-hosted the first West Taihu Global Enterprises Development Forum, partnered with Changzhou  Xitai Lake Technology Industrial Park...</p>
 							</a>
 						</div>
 						<div class="col-6 prog-block">
 							<a href="programs_EN.html#1-5">
 								<img src="images/indexThumbnails/wideThumbnails/zhongrixuezhe.jpg" class="wide-thumbbnail mb-3">
 								<h5>The China-Japan Scholars’ Dialogue on Sino-Japanese Economic Issues Forum</h5>
-								<p>The China-Japan Scholars’ Dialogue on Sino-Japanese Economic Issues Forum, hosted by the U.S.-China New Perspectives Foundation, held on March 27, 2018 in Beijing. Zhixing Zhou, chairman of the U.S.-China New Perspectives Foundation, hosted the forum, which was divided into four sub-forums.
+								<p>The China-Japan Scholars’ Dialogue on Sino-Japanese Economic Issues Forum, hosted by the U.S.-China New Perspectives Foundation, held on March 27, 2018 in Beijing...
 								</p>
 							</a>
 						</div>
@@ -208,7 +208,7 @@
 					<hr class="dash-hr">
 
 					<img src="images/shared/pub2.jpg">
-					<p style="line-height: 16px; font-size: 70%;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. In 2018 most of its functions were transferred to Washington, D.C., and it is now represented by offices on both the East and West Coast of the United States.The goal of the Foundation’s founders was to improve and contribute to China-U.S. relations. The Foundation’s mission is to identify areas in which the two countries can work together, to identify and resolve differences between China and the U.S., to conduct policy research and hold conferences, and, mainly through educational activities and discussions, to achieve the goal of moving China-U.S. relations in the direction of friendly cooperation and increased mutual trust.The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.</p>
+					<p style="line-height: 16px; font-size: 70%;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. The Foundation’s mission is to identify areas in which the two countries can work together, to identify and resolve differences between China and the U.S., to conduct policy research and hold conferences, and, mainly through educational activities and discussions, to achieve the goal of moving China-U.S. relations in the direction of friendly cooperation and increased mutual trust.The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.</p>
 				</div>
 			</div>
 
