--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -112,7 +112,7 @@
 					
 						<hr>
 						<div class="media">
-						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/zhongrijj.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
 						    <h6 class="mt-0"><a href="programs_EN.html#1-2">A Conversation Between Sino-Japanese Scholars...</a></h6>
 						    <p class="prog-intro">The U.S. - China New Perspectives Foundation and the Sasakawa Japan-China Friendship...</p>
@@ -208,7 +208,7 @@
 					<hr class="dash-hr">
 
 					<img src="images/shared/pub2.jpg">
-					<p style="line-height: 16px; font-size: 70%;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. The Foundation’s mission is to identify areas in which the two countries can work together, to identify and resolve differences between China and the U.S., to conduct policy research and hold conferences, and, mainly through educational activities and discussions, to achieve the goal of moving China-U.S. relations in the direction of friendly cooperation and increased mutual trust.The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.</p>
+					<p style="line-height: 16px; font-size: 70%;">The U.S.-China New Perspectives Foundation was founded in 2016. The Foundation’s mission is to identify areas in which the two countries can work together, to identify and resolve differences between China and the U.S., to conduct policy research and hold conferences, and, mainly through educational activities and discussions, to achieve the goal of moving China-U.S. relations in the direction of friendly cooperation and increased mutual trust.The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.</p>
 				</div>
 			</div>
 
