--- a/loop/view_EN.html
+++ b/loop/view_EN.html
@@ -80,7 +80,7 @@
 						</br>
 						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
-							Dunjiaodu is the media partner of New Perspective Foundation.
+							Dunjiaodu is the media partner of The U.S.-China New Perspective Foundation.
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
 						To view more news please visit: <a href="http://www.dunjiaodu.com" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com</a>
