--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -188,22 +188,21 @@
 				<div class="col-3 second-right">
 					<h4>Perspective Sharing</h4> <!--或者改成近期活动 （西太湖） -->
 					<hr>
-					<a href="https://www.brookings.edu/research/is-chinas-development-finance-a-challenge-to-the-international-order/">
-						Is China’s development finance a challenge to the international order?
-					</a><br>
-					<div class="text-right">Oct-2017</div>
+					<a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.wilsoncenter.org_publication_preliminary-2Dstudy-2Dprc-2Dpolitical-2Dinfluence-2Dand-2Dinterference-2Dactivities-2Damerican-2Dhigher&d=DwMFaQ&c=clK7kQUTWtAVEOVIgvi0NU5BOUHhpN0H8p7CSfnc_gI&r=fCEiLutXUOyCTpCTI1K-rw&m=z44FysgpKj5QTU8bfv35vFWqRCTZqx6nINdxg4bJZDQ&s=2DKtU3vsuEZR1cB6zTLu8jtYsXssGseIz2xJabucxcY&e=">
+					A Preliminary Study of PRC Political Influence...</a><br>
+					<div class="text-right">Sep 6, 2018</div>
 					<hr>
-					<a href="https://www.foreignaffairs.com/articles/china/2018-06-14/did-america-get-china-wrong">Did America Get China Wrong?</a><br>
-					<div class="text-right">Mar-2018</div>
+					<a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.wilsoncenter.org_event_decade-2Dus-2Dchina-2Drelations-2Dengagement-2Dto-2Drivalry&d=DwMFaQ&c=clK7kQUTWtAVEOVIgvi0NU5BOUHhpN0H8p7CSfnc_gI&r=fCEiLutXUOyCTpCTI1K-rw&m=z44FysgpKj5QTU8bfv35vFWqRCTZqx6nINdxg4bJZDQ&s=ob0kCkCkzyC3il0Uz_z8Vb9Cqnjx-h5C0rQnd0XfS2U&e=">A Decade of U.S.-China Relations: From Engagement...</a><br>
+					<div class="text-right">Sep 13, 2018</div>
 					<hr>
-					<a href="https://soundcloud.com/ncuscr/amb-jeffrey-bader-term-limits">Jeffrey Bader on Term Limits, Tariffs, and U.S.-China Relations</a><br>
-					<div class="text-right">Mar-2018</div>
+					<a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.brookings.edu_blog_africa-2Din-2Dfocus_2018_09_12_the-2Dpolitical-2Dsignificance-2Dof-2Dchinas-2Dlatest-2Dcommitments-2Dto-2Dafrica_&d=DwMFaQ&c=clK7kQUTWtAVEOVIgvi0NU5BOUHhpN0H8p7CSfnc_gI&r=fCEiLutXUOyCTpCTI1K-rw&m=z44FysgpKj5QTU8bfv35vFWqRCTZqx6nINdxg4bJZDQ&s=V5LldyMyYgbINK0_fyLS8zGIh49KqFJMIXACSOhYeOc&e=">The political significance of China’s latest commitments...</a><br>
+					<div class="text-right">Sep 12, 2018</div>
 					<hr>
-					<a href="http://thehill.com/opinion/finance/390609-us-china-volatility-keeping-private-sector-on-its-toes">US-China volatility keeping private sector on its toes</a><br>
-					<div class="text-right">6-4-2018</div>
+					<a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.foreignaffairs.com_articles_china_2018-2D09-2D10_how-2Dchinas-2Dmiddle-2Dclass-2Dviews-2Dtrade-2Dwar-3Fcid-3D-253Fcid-253Dpaywall-5Ffree-5F091018&d=DwMFaQ&c=clK7kQUTWtAVEOVIgvi0NU5BOUHhpN0H8p7CSfnc_gI&r=fCEiLutXUOyCTpCTI1K-rw&m=z44FysgpKj5QTU8bfv35vFWqRCTZqx6nINdxg4bJZDQ&s=p6ZYR6uriFgoU6mN8AIDTeXvQnZn5BdcptfsV2gbBfs&e=">How China’s Middle Class Views the Trade War</a><br>
+					<div class="text-right">Sep 10, 2018</div>
 					<hr>
-					<a href="http://www.chinafile.com/conversation/does-china-want-koreas-reconcile">Does China Want the Koreas to Reconcile?</a><br>
-					<div class="text-right">4-25-2018</div>
+					<a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.brookings.edu_research_principles-2Dfor-2Dmanaging-2Du-2Ds-2Dchina-2Dcompetition_&d=DwMFaQ&c=clK7kQUTWtAVEOVIgvi0NU5BOUHhpN0H8p7CSfnc_gI&r=fCEiLutXUOyCTpCTI1K-rw&m=z44FysgpKj5QTU8bfv35vFWqRCTZqx6nINdxg4bJZDQ&s=Xtg7vBslJBvNVAGi4ftu3dQaSCQVoAWoVefVN6mF0vk&e=">Principles for managing U.S.-China competition</a><br>
+					<div class="text-right">Aug 2018</div>
 
 					<hr class="dash-hr">
 
